[package]
name = "aha-reqwest-eventsource"
version = "0.1.0"
edition = "2024"
resolver = "3"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/xgpxg/reqwest-eventsource"
documentation = "https://docs.rs/aha-reqwest-eventsource/"
repository = "https://github.com/xgpxg/reqwest-eventsource"
description = "Helper to build an Eventsource using reqwest. This is fork from jpopesculian/reqwest-eventsource"
keywords = ["sse", "eventsource", "reqwest", "stream", "event"]
categories = ["web-programming::http-client", "no-std", "parsing", "asynchronous"]

[dependencies]
eventsource-stream = "0.2.3"
reqwest = { version = "0.13", default-features = false, features = ["stream"] }
futures-core = "0.3.5"
pin-project-lite = "0.2.8"
nom = "7.1.0"
mime = "0.3.16"
futures-timer = "3.0.2"
thiserror = "1.0.30"

[dev-dependencies]
futures = "0.3.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-retry = "0.6"
pin-utils = "0.1"
rocket = "0.5.0"
